--- a/template.html
+++ b/template.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html class="h-100">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap" rel="stylesheet">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
